syntax = "proto3";
package productPackage;
message Product {
    int32 id = 1;
    string title = 2;
    string price = 3;
}
message ProductID {
    int32 id = 1;
}

message ProductList {
    repeated product products = 1;
}
message NewProduct {
    string title = 1;
    string price = 2;
}
message Empty{}
message Result {
    string status = 1;
}
service ProductService {
    rpc listProduct (Empty) returns (ProductList);
    rpc getProduct (ProductID) returns (Product);
    rpc createProduct (NewProduct) returns (Result);
    rpc updateProduct (Product) returns (Result);
    rpc deleteProduct (ProductID) returns (Result);
}